--- a/blog.html
+++ b/blog.html
@@ -6,12 +6,12 @@
         <title> Blog</title>
     </head>
     <body>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+        </nav>
          <h1> Página Blog </h1>
     </body>
 </html>
